--- a/style.css
+++ b/style.css
@@ -5,30 +5,10 @@ header {
     color: #fff;
     font-size:35px;
   }
-/* Cards are split into two columns at 992px or smaller */
-@media screen and (max-width: 992px) {
-    .card {
-      width: 50%;
-    }
-    /* Change the header color */
-    header {
-      background: #772014;
-    }
-  }
-  
-  /* Cards are stacked on top of each other at 768px or smaller */
-  @media screen and (max-width: 768px) {
-    .card {
-      width: 100%;
-    }
-    /* Change the header color */
-    header {
-      background: #8ac4ff;
-    }
-  }
 
   main{
     display: flex;
+    background-color: rgb(175, 198, 212);
   }
 
   .card {
@@ -38,15 +18,6 @@ header {
   background-color: rgb(175, 198, 212);
 }
 
-img{
-  display:block;
-  margin-bottom: 25px;
-  height:700px;
-  width:50%;
-  margin-left: auto;
-  margin-right:auto;
-  background: rgb(175, 198, 212);
-}
 .main_page{
 line-height: 24px;
 padding: 10px;
@@ -64,10 +35,34 @@ li{
   background-color:gray;
 }
 
-h1{
-  font-size: 35px;
+div{
+  height: 450px;
+  width: 450px;
+  margin: 15px;
+  padding:20px;
 }
 
-h3{
-  font-size: 25px;
+.about_me{
+  color: blue;
+  background-color: darkgoldenrod;
+  font-size:30px;
+  text-align: center;
+}
+
+.experience_section{
+  color:blue;
+  background:rgb(36, 207, 150);
+  font-size:30px;
+  text-align: center;
+ 
+}
+
+main_cards{
+  display:block;
+}
+
+img{
+  height:400px;
+  width:400px;
+  
 }
