--- a/style.css
+++ b/style.css
@@ -1,68 +1,136 @@
-header {
-    padding: 25px;
+  header {
+    padding: 10px;
     text-align: center;
-    background: rgb(112, 112, 112);
+    background: gray;
     color: #fff;
     font-size:35px;
+    position:relative;
   }
+
+  header.relative{
+    position: relative;
+  }  
 
   main{
     display: flex;
-    background-color: rgb(175, 198, 212);
+    position:absolute;
+    top:0px;
+    right:10px;
+  }
+
+  .profile{
+    top:0px;
+    left:0px;
+    height:180px;
+    width:180px;
   }
 
   .card {
-  flex: 1;
-  padding: 10px;
-  text-align: center;
-  background-color: rgb(175, 198, 212);
+    padding: 10px;
+    color:white;
+    font-size:17px;
+   }
+
+  .main_page{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    line-height: 24px;
+    padding: 10px;
+    color:black;
+    background-color: rgb(175, 198, 212);
+    font-weight: bolder;
+    font-family:'Times New Roman', Times, serif;
+    text-align:center;
+    font-size:18px;
+  }
+
+  li{
+    padding:10px;
+    display:inline;
+    background-color:gray;
+    color:black;
+  }
+
+  div{
+    height: 450px;
+    width: 450px;
+    margin: 15px;
+    padding:20px;
+  }
+
+  .welcome{
+    color: blue;
+    background-color: darkgoldenrod;
+    font-size:30px;
+    text-align: center;
+  }
+
+  .experience_section{
+    color:blue;
+    background:rgb(36, 207, 150);
+    font-size:30px;
+    text-align: center;
+  }
+
+  .coding_exp{
+    color:blue;
+    background:rgb(185, 183, 47);
+    font-size:30px;
+    text-align: center;
+  }
+
+  img{
+    height:400px;
+    width:420px; 
+  }
+
+  a:visited{
+    color:unset;
+  }
+
+  .contact_info{
+    color:blue;
+    background:rgb(157, 81, 180);
+    font-size:30px;
+    text-align: center;
+  }
+
+  .about_me_pop_up{
+    display:flex;
+    justify-content: center;
+    flex-direction: row;
+    background-color: rgb(175, 198, 212);
+    color:black;
+  }
+
+  largerbox{
+    height: 520px;
+    width: 600px;
+    margin: 15px;
+    padding: 25px;
+  }
+
+  .largerpicture{
+    height: 460px;
+    width: 500px;
+  }
+
+.top_selection{
+    display:flex;
+    justify-content: center;
+    flex-direction: row;
+    height: 175px;
+    width: 850px;
+    margin: 15px;
+    padding:20px;
+    background-color: lightslategray;
 }
 
-.main_page{
-line-height: 24px;
-padding: 10px;
-color:black;
-background-color: rgb(175, 198, 212);
-font-weight: bolder;
-font-family:'Times New Roman', Times, serif;
-text-align:center;
-font-size:18px;
-}
-
-li{
- padding:10px;
- display:inline;
-  background-color:gray;
-}
-
-div{
-  height: 450px;
-  width: 450px;
-  margin: 15px;
-  padding:20px;
-}
-
-.about_me{
-  color: blue;
-  background-color: darkgoldenrod;
-  font-size:30px;
-  text-align: center;
-}
-
-.experience_section{
-  color:blue;
-  background:rgb(36, 207, 150);
-  font-size:30px;
-  text-align: center;
- 
-}
-
-main_cards{
-  display:block;
-}
-
-img{
-  height:400px;
-  width:400px;
-  
+.top_inner_box{
+    height: 150px;
+    width: 1000px;
+    margin-left: 5px;
+    padding:15px;
+    background-color: lightgray;
 }
